# wotbreplay-inspector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yaml
src/: commands.rs  inspect.rs  main.rs  options.rs  prelude.rs
src/commands/: dump_data.rs  results.rs  watch.rs
src/inspect/: inspector.rs  models.rs  visit.rs
