[package]
name = "wotbreplay-inspector"
description = "World of Tanks Blitz replay inspector"
version = "0.0.0"
edition = "2021"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
readme = "README.md"
repository = "https://github.com/eigenein/wotbreplay-inspector"
license = "MIT"
keywords = ["world-of-tanks-blitz", "replay", "parser", "wargaming", "results"]
categories = ["parsing"]

[features]
default = []

[dependencies]
anyhow = "1.0.66"
average = { version = "0.13.1", default-features = false, features = ["std"] }
clap = { version = "4.0.29", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
notify = "5.1.0"
prost = { version = "0.11.3", default-features = false }
serde = { version = "1.0.149", default-features = false, features = ["derive"] }
serde_json = "1.0.89"
sled = "0.34.7"
wotbreplay-parser = "0.2.0-alpha.5"
